--- a/_config.yml
+++ b/_config.yml
@@ -18,12 +18,12 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Research # the main title
+title: J-Security # the main title
 
 tagline: A text-focused Jekyll theme # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  A blog about hacking, reverse engineering and binary exploitation.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: "https://joachimff.github.io"
