--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ timezone:
 
 title: J-Security # the main title
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: A blog about hacking, reverse engineering and binary exploitation. # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A blog about hacking, reverse engineering and binary exploitation.
